--- a/react-app/clinic-frontend/src/Components/Sidebar.css
+++ b/react-app/clinic-frontend/src/Components/Sidebar.css
@@ -1,16 +1,17 @@
 .sidebar {
-  width: 250px;
+  width: 300px;
   min-height: 100vh;
   position: fixed;
   top: 0;
   left: 0;
   display: flex;
   flex-direction: column;
-  overflow-y: auto;
+  overflow: hidden;
   border-top-right-radius: 30px;
   border-bottom-right-radius: 30px;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
   position: relative;
+  
 }
 
 
@@ -56,9 +57,8 @@
     padding: 20px;
     position: relative;
     z-index: 2; 
-    width: 245px;
+    width: 250px;
     align-items: left;
-    margin-left: 40px;
   }
   
   /* Sidebar buttons style */
