--- a/react-app/clinic-frontend/src/Components/login.css
+++ b/react-app/clinic-frontend/src/Components/login.css
@@ -22,7 +22,7 @@
     background-size: cover; /* Cover the entire screen */
     background-position: center;
     filter: blur(5px); /* Apply blur effect to the background */
-    z-index: -1; /* Place it behind the content */
+    z-index: 0; /* Place it behind the content */
   }
   
   /* Style the form container with an initial right translation */
@@ -51,6 +51,7 @@
     text-align: center;
     cursor: pointer; /* Add a pointer cursor to indicate it's clickable */
     margin-bottom: 15px;
+    z-index: 1;
   }
   
   /* Style the logo image */
