--- a/react-app/clinic-frontend/src/Components/familyMembercard.css
+++ b/react-app/clinic-frontend/src/Components/familyMembercard.css
@@ -42,7 +42,7 @@
   background-color: #022b3a; /* Darker blue when hovering */
 }
 
-.AppPack {
+.famPack {
   display: flex;
   flex-wrap: wrap; /* Allows cards to wrap to the next line */
   justify-content: flex-start; /* Aligns cards to the start of the container */
