--- a/react-app/clinic-frontend/src/Components/packageCard.css
+++ b/react-app/clinic-frontend/src/Components/packageCard.css
@@ -35,6 +35,31 @@
   background-color: #022b3a; /* Darker blue when hovering */
 }
 
+.AppSearch {
+  display: flex;
+    flex-wrap: wrap; /* Allows cards to wrap to the next line */
+    justify-content: flex-start; /* Aligns cards to the start of the container */
+    align-items: flex-start; /* Aligns cards to the top of the container */
+    padding: 16px; /* Optional: Adds some space inside the container */
+    height:80vh;
+    overflow-x: hidden;
+    min-width: 96.8vw;
+    background-color: #e1e5f2;
+}
+
+.ApppointmentsShownPack{
+  display: flex;
+    flex-wrap: wrap; /* Allows cards to wrap to the next line */
+    justify-content: flex-start; /* Aligns cards to the start of the container */
+    align-items: flex-start; /* Aligns cards to the top of the container */
+    padding: 16px; /* Optional: Adds some space inside the container */
+    height:80vh;
+    overflow-x: hidden;
+    min-width: 96.8vw;
+    margin-top: 30px;
+    background-color: #e1e5f2;
+}
+
 .package-buttons {
   display: flex;
   justify-content: center; /* Center buttons horizontally */
