--- a/react-app/clinic-frontend/src/Elements/AppointmentCard.css
+++ b/react-app/clinic-frontend/src/Elements/AppointmentCard.css
@@ -36,7 +36,7 @@
     background-color: #022b3a; /* Darker blue when hovering */
   }
   
-  .AppPack {
+  .AppointmentPack {
     display: flex;
     flex-wrap: wrap; /* Allows cards to wrap to the next line */
     justify-content: flex-start; /* Aligns cards to the start of the container */
