--- a/react-app/clinic-frontend/src/Components/packageCard.css
+++ b/react-app/clinic-frontend/src/Components/packageCard.css
@@ -56,7 +56,7 @@
   height: 80vh;
   overflow-x: hidden;
   min-width: 96.8vw;
-  width: 100vw;
+  width: 95vw;
   margin-top: 30px;
   background-color: #e1e5f2;
 }
@@ -81,4 +81,16 @@
   min-width: fit-content;
   flex: 0 1 auto;
   margin-bottom: 0;
+}
+
+.AppPackages {
+  display: flex;
+  flex-wrap: wrap; /* Allows cards to wrap to the next line */
+  justify-content: flex-start; /* Aligns cards to the start of the container */
+  align-items: flex-start; /* Aligns cards to the top of the container */
+  padding: 16px; /* Optional: Adds some space inside the container */
+  height: 100vh;
+  overflow-x: hidden;
+  min-width: 100vw;
+  background-color: #ffffff;
 }
