--- a/react-app/clinic-frontend/src/Elements/NavBar.css
+++ b/react-app/clinic-frontend/src/Elements/NavBar.css
@@ -58,3 +58,44 @@
     align-items: center;
   }
   
+  .navbar-link img {
+    height: 25px;
+    width: 25px;
+  }
+
+  .navbar-right {
+    position: relative; /* Needed for absolute positioning of dropdown */
+    /* Other styles as needed */
+  }
+  
+  .dropdown-menu {
+    position: absolute;
+    margin-top: 130px;
+    margin-right: -20px;
+    right: 0; /* Align dropdown to the right */
+    background-color: white; /* Background of dropdown */
+    border: 1px solid #ddd; /* Border for dropdown */
+    border-bottom-left-radius: 8px;
+    border-top-left-radius: 8px;
+    z-index: 1; /* Ensures dropdown is above other content */
+    width: 150px;
+  }
+  
+  .dropdown-item {
+    display: block;
+    padding: 10px;
+    text-align: left;
+    border-bottom: 1px solid #ddd; /* Separator for items */
+    background-color: white;
+    width: 100%; /* Full width of the parent */
+    box-sizing: border-box;
+    text-decoration: none;
+    color: black; /* Text color */
+    border-bottom-left-radius: 8px;
+    border-top-left-radius: 8px;
+  }
+  
+  .dropdown-item:hover {
+    background-color: #f5f5f5; /* Hover effect for dropdown items */
+  }
+  
