--- a/react-app/clinic-frontend/src/Elements/ImageCarousel.css
+++ b/react-app/clinic-frontend/src/Elements/ImageCarousel.css
@@ -1,7 +1,7 @@
 .carousel {
   position: flex;
   width: 99vw; /* Half of the screen width */
-  height: 20vh;
+  height: 22vh;
   margin: auto;
 }
 
@@ -28,20 +28,20 @@
 }
 .text-overlay {
   position: absolute;
-  bottom: 100px;
+  bottom: 140px;
   left: 10px;
   right: 0;
-  background-color: rgba(2, 43, 58, 0.4);  /*Semi-transparent black background */
+  background-color: rgba(2, 43, 58, 0.4); /*Semi-transparent black background */
   /* background-color: rgba(225, 229, 242, 0.6);*/
   color: white;
   padding: 10px;
   text-align: left;
   width: 450px;
-  height: 300px;
+  height: 350px;
   z-index: 0;
   border: 2px solid #022b3a; /* Border color */
-  border-top-left-radius:20px;
-  border-bottom-right-radius:20px;  
+  border-top-left-radius: 20px;
+  border-bottom-right-radius: 20px;
 }
 
 .text-overlay h3 {
@@ -50,8 +50,8 @@
   font-size: 20px; /* Adjust size as needed */
   font-weight: bold; /* Bold font for title */
   font-size: 50px;
-  color: #E1e5f2;
-  font-family: 'Times New Roman', Times, serif;
+  color: #e1e5f2;
+  font-family: "Times New Roman", Times, serif;
 }
 
 .text-overlay p {
@@ -61,7 +61,8 @@
   line-height: 1.4; /* Good for readability */
   font-size: 25px;
   color: white;
-  font-family: 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  font-family: "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial,
+    sans-serif;
 }
 
 .left-arrow,
