--- a/react-app/clinic-frontend/src/Elements/NavBar.module.css
+++ b/react-app/clinic-frontend/src/Elements/NavBar.module.css
@@ -1,10 +1,9 @@
 .navbar {
-  background-color: #004350;
+  background-color: #fbfbfb;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   position: sticky;
   top: 0;
   z-index: 1000;
-  border: 2px solid #638593; /* Border color */
   border-radius: 8px;
 }
 
@@ -43,7 +42,7 @@
 
 .navbarLink {
   text-decoration: none;
-  color: white; /* Adjust color as needed */
+  color: #1f2022;
   font-size: 18px; /* Adjust font size as needed */
   cursor: pointer;
   font-family: "Times New Roman", Times, serif;
@@ -122,7 +121,7 @@
 }
 
 .navbarLinkSection {
-  color: white;
+  color: #1f2022;
 }
 
 .navbarLink:hover .dropdownMenu {
