--- a/react-app/clinic-frontend/src/Elements/NavBar.module.css
+++ b/react-app/clinic-frontend/src/Elements/NavBar.module.css
@@ -1,17 +1,17 @@
 .navbar {
-  background-color: #f1f0f0;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  background-color: #f1f1f1;
   position: fixed;
   width: 100vw;
+  height: 7vh;
   top: 0;
   left: 0;
   z-index: 1000;
-  border-radius: 8px;
+  margin-top: 60px;
 }
 
 .navbarContainer {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   padding: 0 20px;
   height: 60px;
