--- a/react-app/clinic-frontend/src/Components/viewFamilyMember.module.css
+++ b/react-app/clinic-frontend/src/Components/viewFamilyMember.module.css
@@ -36,4 +36,8 @@
     font-size: 14px;
     font-family:Verdana, Geneva, Tahoma, sans-serif
   }
+
+  .tableWrapper{
+    margin-top: 6rem;
+  }
   
