--- a/react-app/clinic-frontend/src/Components/changePassword.module.css
+++ b/react-app/clinic-frontend/src/Components/changePassword.module.css
@@ -15,7 +15,7 @@
   .label {
     display: block;
     margin-bottom: 10px;
-    font-size: 13pt;
+    font-size: 12pt;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif
   }
   
@@ -28,11 +28,13 @@
     width: 100%;
     padding: 12px;
     box-sizing: border-box;
-    border: 1px solid #ccc;
-    border-radius: 15px;
+    border: 1px solid rgb(231, 231, 231);
+    border-radius: 35px;
     transition: border-color 0.3s;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 13pt;
+    margin-top: 0.3rem;
+    background-color: rgb(231, 231, 231);
   }
   
   .input:hover {
