--- a/react-app/clinic-frontend/src/Components/allDoctors.module.css
+++ b/react-app/clinic-frontend/src/Components/allDoctors.module.css
@@ -7,9 +7,8 @@
   justify-content: center;
   align-items: center;
   min-height: calc(100vh - 200px);
+  overflow-x: hidden;
 }
-
-
 
 /* Add a style for the table header */
 .h1 {
@@ -18,18 +17,17 @@
   font-size: 25px; /* Increase font size for the header */
 }
 
-.tableHeader{
+.tableHeader {
   font-size: 14px;
-  font-family:Verdana, Geneva, Tahoma, sans-serif
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
-
 .headerBar {
-display: flex;
-width: 100%;
-padding: 10px;
-margin-left: 5rem;
-margin-top: 8rem;
+  display: flex;
+  width: 100%;
+  padding: 10px;
+  margin-left: 5rem;
+  margin-top: 8rem;
 }
 
 .headerBar2 {
@@ -38,34 +36,34 @@ margin-top: 8rem;
   padding: 10px;
   margin-bottom: 20px;
   margin-left: 5rem;
-  }
+}
 
 .searchInput {
-width: 20%;
-padding: 8px;
-font-size: 11pt; /* Font size for the select element */
-border: 1px solid #ccc;
-transition: border-color 0.3s, box-shadow 0.3s;
+  width: 20%;
+  padding: 8px;
+  font-size: 11pt; /* Font size for the select element */
+  border: 1px solid #ccc;
+  transition: border-color 0.3s, box-shadow 0.3s;
 }
 
 .searchButton {
-padding: 8px 16px;
-background-color: #007bff;
-color: white;
-border: none;
-cursor: pointer;
-width: 15%;
-font-size: 12pt;
-transition: background-color 0.3s;
+  padding: 8px 16px;
+  background-color: #007bff;
+  color: white;
+  border: none;
+  cursor: pointer;
+  width: 15%;
+  font-size: 12pt;
+  transition: background-color 0.3s;
 }
 
 .searchInput:hover {
-border-color: #007bff; /* Change border color on hover */
-box-shadow: 0 0 8px rgba(0, 123, 255, 0.5); /* Add box shadow on hover */
+  border-color: #007bff; /* Change border color on hover */
+  box-shadow: 0 0 8px rgba(0, 123, 255, 0.5); /* Add box shadow on hover */
 }
 
 .searchButton:hover {
-background-color: #0056b3; /* Change background color on hover */
+  background-color: #0056b3; /* Change background color on hover */
 }
 
 .filterSelect {
@@ -84,4 +82,3 @@ background-color: #0056b3; /* Change background color on hover */
   font-size: 11pt; /* Font size for options */
   font-family: Arial, Helvetica, sans-serif;
 }
-
