--- a/react-app/clinic-frontend/src/Components/FollowUpScheduler.module.css
+++ b/react-app/clinic-frontend/src/Components/FollowUpScheduler.module.css
@@ -34,7 +34,7 @@ body {
     margin-top: 30px;
   }
   
-  label {
+  labelFollowUp {
     display: flex;
     justify-items: center;
     color: #555;
