adjusting uploading health record

--- a/react-app/clinic-frontend/src/Components/viewallmypatients.module.css
+++ b/react-app/clinic-frontend/src/Components/viewallmypatients.module.css
@@ -10,7 +10,7 @@
 }
 
 .approveButton {
-    background-color: #183f59;
+    background-color: #1375dd;
     color: white;
 }
 
@@ -20,7 +20,7 @@
 }
 
 .rejectButton {
-    background-color: #183f59;
+    background-color: #1375dd;
     color: white;
 }
 
