--- a/react-app/clinic-frontend/src/Components/ManageHealthRecords.module.css
+++ b/react-app/clinic-frontend/src/Components/ManageHealthRecords.module.css
@@ -131,8 +131,18 @@ body {
   margin: 3px;
   border-radius: 4px;
   margin-left: 10px;
-  margin-top: -10px;
 
+}
+
+.AddHealthRecordButton{
+  width: 20%;
+  padding: 8px;
+  font-size: 11pt; /* Font size for the select element */
+  border: 1px solid #ccc;
+  transition: border-color 0.3s, box-shadow 0.3s;
+  margin: 3px;
+  border-radius: 4px;
+  margin-left: 10px;
 }
 
 .button {
@@ -181,3 +191,61 @@ body {
   color: #333;
 }
 
+.formContainer {
+  width: 400px;
+  height: 250px;
+  margin: 2rem auto;
+  padding: 20px;
+  border: 1px solid #e1e1e1;
+  border-radius: 10px;
+  background-color: #f9f9f9;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.formTitle {
+  margin-top: 20px;
+  font-size: 1.5rem;
+  text-align: center;
+  color: #333;
+  margin-bottom: 1rem;
+}
+
+.formLabel {
+  display: block;
+  margin-bottom: 0.5rem;
+  color: #666;
+  font-size: 1rem;
+}
+
+.formInput,
+.formFileInput {
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 1rem;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  box-sizing: border-box;
+  font-size: 1rem;
+}
+
+.formButton {
+  width: 100%;
+  padding: 10px;
+  background-color: #4CAF50;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 1rem;
+  transition: background-color 0.3s;
+}
+
+.formButton:hover {
+  background-color: #45a049;
+}
+
+.statusMessage {
+  text-align: center;
+  color: #4CAF50;
+  margin-top: 1rem;
+}
