--- a/clinic-frontend/src/Components/adminDeleteDoctor.module.css
+++ b/clinic-frontend/src/Components/adminDeleteDoctor.module.css
@@ -42,3 +42,17 @@
     color: white; /* Icon color */
   }
   
+  .searchInput {
+    padding: 8px 15px;
+    margin-bottom: 10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    font-size: 16px;
+    outline: none;
+    transition: border-color 0.3s ease-in-out;
+  
+    &:focus {
+      border-color: #007bff; /* Change color as needed */
+    }
+  }
+  
