--- a/clinic-frontend/src/Components/doctorHome.css
+++ b/clinic-frontend/src/Components/doctorHome.css
@@ -5,7 +5,7 @@
 }
 
 .carousel-container-doctorH{
-    margin-top: 480px;
+    margin-top: 1500px;
     gap: 20px; /* Adjust the gap between items as needed */
     justify-content: center; /* Centers the items horizontally */
     width: auto;
@@ -28,11 +28,26 @@
     gap: 20px; /* Adjust the gap between items as needed */
     justify-content: center; /* This will center the items in the container */
     align-items: flex-start; /* Align items to the start of the cross axis */
-    margin-top: 370px;
+    margin-top: 50px;
     align-items: center;
     background-color: white;
     font-size: x-large;
     height: 200px;
 
   }
+  .about-us-container {
+    background-color: #007bff; /* Blue background color */
+    color: #fff; /* White text color */
+    padding: 2rem;
+    border-radius: 10px;
+    margin-top: 8rem;
+    width: 100%;
+    height: 400px;
+  }
+  
+  .about-us-container h2 {
+    font-size: 40pt;
+    margin-bottom: 10px;
+  }
+  
   
