--- a/clinic-frontend/src/Components/patientHome.module.css
+++ b/clinic-frontend/src/Components/patientHome.module.css
@@ -2,6 +2,7 @@
   display: relative;
   align-items: center;
   justify-content: center;
+  height: 2300px;
 }
 
 .carouselContainer {
@@ -21,7 +22,6 @@
   justify-content: center; /* This will center the items in the container */
   align-items: flex-start; /* Align items to the start of the cross axis */
   align-items: center;
-  background-color: white;
 }
 
 .titleofPAGE {
@@ -31,15 +31,30 @@
   justify-content: center; /* This will center the items in the container */
   align-items: flex-start; /* Align items to the start of the cross axis */
   margin-top: 350px;
+  margin-left: 2rem;
   align-items: center;
-  background-color: white;
   font-size: x-large;
   height: 200px;
 }
 .patientHomeContainer {
   height: 100vh;
   width: 100vw;
-  background-color: white;
   max-width: 100vw;
   overflow-x: hidden;
+}
+
+
+.aboutuscontainer {
+  background-color: #007bff; /* Blue background color */
+  color: #fff; /* White text color */
+  padding: 2rem;
+  border-radius: 10px;
+  margin-top: 8rem;
+  width: 100%;
+  height: 430px;
+}
+
+.aboutuscontainerh2 {
+  font-size: 40pt;
+  margin-bottom: 10px;
 }
