--- a/clinic-frontend/src/Components/FollowUpScheduler.module.css
+++ b/clinic-frontend/src/Components/FollowUpScheduler.module.css
@@ -1,41 +1,20 @@
-/*
-
-
-body {
-    font-family: 'Arial', sans-serif;
-    background-color: #f5f5f5;
-    margin: 0;
-    padding: 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-  }
-  
-  .container {
-    background-color: #fff;
-    border-radius: 8px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    padding: 20px;
-    width: 400px;
-  }
-  
-  h1 {
+  .headerofFollowUp {
     text-align: center;
     color: #333;
     margin-top: -20px;
   }
 
-  form {
+  .formOfFollowUp {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     gap: 10px;
     margin-top: 30px;
+    width: 500px;
   }
   
-  labelFollowUp {
+  .labelFollowUp {
     display: flex;
     justify-items: center;
     color: #555;
@@ -45,7 +24,7 @@ body {
   }
   
   
-  p {
+  .paragraphofFollowUp {
     margin-top: 10px;
     font-size: 14px;
     color: #555;
@@ -67,6 +46,17 @@ body {
   z-index: 999; 
 }
 
+input[type="radio" i] {
+  background-color: initial;
+  cursor: default;
+  appearance: auto;
+  box-sizing: border-box;
+  margin: 3px 3px 0px 5px;
+  padding: 3px;
+  border: initial;
+  width: 50px;
+}
+
 .confirmationDialog {
   display: flex;
   flex-direction: column;
@@ -78,8 +68,8 @@ body {
   border-radius: 4px;
   padding: 20px;
   text-align: center;
-  width: 1000px;
-  height: 400px;
+  width: 700px;
+  height: 500px;
   min-height: 45vh;
   overflow-y: auto;
   overflow-x: hidden;
@@ -119,7 +109,7 @@ body {
   height: 43vh;
 }
 
-.input {
+.inputOfFollowUp {
   width: 20%;
   padding: 8px;
   font-size: 11pt; 
@@ -129,22 +119,21 @@ body {
   border-radius: 4px;
   margin-left: 10px;
   margin-top: -10px;
-
 }
 
-.button {
+.buttonOfFollowUp {
   padding: 8px 16px;
-  background-color: #007bff;
+  background-color: #336cfb;
   color: white;
   border: none;
   cursor: pointer;
-  width: 20%;
+  width: 100%;
   font-size: 12pt;
   transition: background-color 0.3s;
 }
 
-.input:hover {
-  border-color: #007bff; 
+.inputOfFollowUp:hover {
+  border-color: #336cfb; 
   box-shadow: 0 0 8px rgba(0, 123, 255, 0.5); 
 
 }
@@ -162,12 +151,11 @@ body {
   color: #333;
   margin-left: 10px;
   margin-top: -10px;
-
 }
 
 .selectDropdown:hover{
   outline: none;
-  border-color: #007bff;
+  border-color: #336cfb;
   box-shadow: 0 0 0 0.2rem rgba(0,123,255,.25);
 }
 
@@ -176,6 +164,67 @@ body {
   color: #333;
 }
 
+.radioOfFollowUp {
+  cursor: pointer;
+  width: 500px;
+}
 
+.radioOfFollowUp :after {
+  width: 15px;
+  height: 15px;
+  border-radius: 15px;
+  top: -2px;
+  left: -1px;
+  position: relative;
+  background-color: #d1d3d1;
+  content: '';
+  visibility: visible;
+  border: 2px solid white;
+  
+}
 
+/*
+.radioOfFollowUp :checked:after {
+  width: 15px;
+  height: 15px;
+  border-radius: 15px;
+  top: -2px;
+  left: -1px;
+  position: absolute;
+  background-color: #336cfb;
+  content: '';
+  display: inline-block;
+  visibility: visible;
+  border: 3px solid rgb(21, 35, 49);
+  cursor: default;
+  appearance: auto;
+  box-sizing: border-box;
+  margin: 3px 3px 0px 5px;
+  padding: initial;
+  border: initial;
+}
 */
+
+.pagination {
+  display: flex;
+  justify-content: center;
+  padding: 20px;
+}
+
+.pagination button {
+  margin: 0 5px;
+  padding: 5px 10px;
+  border: 1px solid #ddd;
+  background-color: transparent;
+  cursor: pointer;
+}
+
+.pagination button:hover {
+  background-color: #eee;
+}
+
+.pagination .activePage {
+  background-color: #007bff;
+  color: white;
+  border-color: #007bff;
+}
