--- a/clinic-frontend/src/Components/infoWindow.module.css
+++ b/clinic-frontend/src/Components/infoWindow.module.css
@@ -19,7 +19,7 @@
     padding: 20px;
     text-align: center;
     width: 500px;
-    height: 300px;
+    height: 250px;
     overflow-y: auto;
   }
   
@@ -56,6 +56,8 @@
   .confirmationButtons button.cancel {
     background-color: #f44336; /* Red color for cancel button */
     color: #fff;
+    margin-top: 30px;
+
   }
   
   .closeButton {
