--- a/clinic-frontend/src/Components/appointments.module.css
+++ b/clinic-frontend/src/Components/appointments.module.css
@@ -41,4 +41,6 @@
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Optional: shadow for the header */
 }
 
-/* Additional styling if needed */
+.DivOfDoctorAppointments{
+  margin-top: 100px;
+}
