--- a/clinic-frontend/src/Components/appointments.module.css
+++ b/clinic-frontend/src/Components/appointments.module.css
@@ -41,6 +41,21 @@
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Optional: shadow for the header */
 }
 
-.DivOfDoctorAppointments{
+.DivOfDoctorAppointments {
   margin-top: 100px;
+}
+
+.searchInput {
+  width: 40%;
+  padding: 8px;
+  font-size: 11pt; /* Font size for the select element */
+  border: 1px solid #ccc;
+  transition: border-color 0.3s, box-shadow 0.3s;
+  margin: 3px;
+  max-width: 15vw;
+}
+
+.searchInput:hover {
+  border-color: #007bff; /* Change border color on hover */
+  box-shadow: 0 0 8px rgba(0, 123, 255, 0.5); /* Add box shadow on hover */
 }
