--- a/clinic-frontend/src/Components/patientEditAcc.module.css
+++ b/clinic-frontend/src/Components/patientEditAcc.module.css
@@ -1,15 +1,19 @@
+.Bigcontainer{
+  width: 1200px;
+  padding-top: 20px;
+  margin-top: 8rem;
+  box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.267);
+ display:block;
+  border-radius: 15px;
+  margin-bottom: 1rem;
+  max-height:  400px;
+  margin: auto;
+}
+
 .addMedicinecontainer {
-    width: 1200px;
-    padding-top: 20px;
-    margin-top: 8rem;
-    box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.267);
     display: flex;
     flex-wrap: wrap; /* Allow wrapping to the next line if needed */
     justify-content: space-between;
-    border-radius: 15px;
-    margin-bottom: 1rem;
-    max-height:  400px;
-    margin: auto;
   }
   
   .label {
