--- a/clinic-frontend/src/Elements/AppointmentCard.css
+++ b/clinic-frontend/src/Elements/AppointmentCard.css
@@ -1,6 +1,6 @@
 .appointment-card {
-    border: 1px solid #022b3a; /* Adjusted border color */
-    background-color: #1f7a8c; /* Light blue background */
+    border: 1px solid #336cfb; /* Adjusted border color */
+    background-color: #e1e1e1; /* Light blue background */
     border-radius: 8px;
     padding: 20px; /* Increased padding for a larger card */
     margin: 16px;
@@ -18,12 +18,12 @@
   
   .appointment-details {
     margin-bottom: 16px;
-    color: #ffffff; /* Dark blue for details */
+    color: #000000; /* Dark blue for details */
   }
   
   .viewdetails-button {
-    background-color: #e1e5f2; /* Teal for the button */
-    color: black; /* White text for the button */
+    background-color: #336cfb; /* Teal for the button */
+    color: rgb(255, 255, 255); /* White text for the button */
     border: none;
     border-radius: 4px;
     padding: 10px 20px;
@@ -33,7 +33,7 @@
   }
   
   .viewdetails-button:hover {
-    background-color: #022b3a; /* Darker blue when hovering */
+    background-color: #101415; /* Darker blue when hovering */
   }
   
   .AppointmentPack {
