--- a/clinic-frontend/src/Components/Book.css
+++ b/clinic-frontend/src/Components/Book.css
@@ -86,19 +86,22 @@
 
 .confirmationDialog {
   display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
   justify-content: center;
   align-items: flex-start;
-  flex-wrap: wrap;
   background-color: #fff;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
   padding: 20px;
   text-align: center;
-  width: 1000px;
-  min-height: 45vh;
-  max-height: 50vh;
+  min-width: 60vw;
+  max-width: 75vw;
+  min-height: 60vh;
+  max-height: 70vh;
   overflow-y: auto;
   overflow-x: hidden;
+  margin-top: 50px;
 }
 
 .confirmationMessage {
@@ -135,4 +138,17 @@
   height: 43vh;
 }
 
-/* Other existing styles */
+.Container-selection-myself-fm{
+
+  margin-bottom: 30px;
+
+}
+
+.conatiner-of-all-avai-dates{
+
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: flex-start;
+}
