--- a/clinic-frontend/src/Components/allDoctors.module.css
+++ b/clinic-frontend/src/Components/allDoctors.module.css
@@ -8,7 +8,9 @@
   align-items: center;
   min-height: calc(100vh - 200px);
   overflow-x: hidden;
+  margin-top:100px ;
 }
+
 
 /* Add a style for the table header */
 .h1 {
@@ -45,6 +47,7 @@
   border: 1px solid #ccc;
   transition: border-color 0.3s, box-shadow 0.3s;
   margin: 3px;
+  height: 20px;
 }
 
 .searchButton {
@@ -56,6 +59,8 @@
   width: 15%;
   font-size: 12pt;
   transition: background-color 0.3s;
+  height: 37px;
+  margin-top: 3px;
 }
 
 .searchInput:hover {
@@ -76,6 +81,8 @@
   font-size: 11pt; /* Font size for the select element */
   font-family: Arial, Helvetica, sans-serif;
   margin: 3px;
+  height: 37px;
+  margin-top: 3px;
 }
 
 /* Style the options within the select element */
