--- a/clinic-frontend/src/Components/FollowUpScheduler.module.css
+++ b/clinic-frontend/src/Components/FollowUpScheduler.module.css
@@ -1,49 +1,46 @@
-  .headerofFollowUp {
-    text-align: center;
-    color: #333;
-    margin-top: -20px;
-  }
+.headerofFollowUp {
+  text-align: center;
+  color: #333;
+  margin-top: -20px;
+}
 
-  .formOfFollowUp {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    gap: 10px;
-    margin-top: 30px;
-    width: 500px;
-  }
-  
-  .labelFollowUp {
-    display: flex;
-    justify-items: center;
-    color: #555;
-    width: 100%;
-    font-size: 13pt; 
-    margin-left: 550px;
-  }
-  
-  
-  .paragraphofFollowUp {
-    margin-top: 10px;
-    font-size: 14px;
-    color: #555;
-    text-align: center;
-  }
-  
+.formOfFollowUp {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+  margin-top: 30px;
+  width: 500px;
+}
 
-  
+.labelFollowUp {
+  display: flex;
+  justify-items: center;
+  color: #555;
+  width: 100%;
+  font-size: 13pt;
+  margin-left: 550px;
+}
+
+.paragraphofFollowUp {
+  margin-top: 10px;
+  font-size: 14px;
+  color: #555;
+  text-align: center;
+}
+
 .confirmationBackdrop {
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.7); 
+  background: rgba(0, 0, 0, 0.7);
   display: flex;
   align-items: center;
   justify-content: center;
-  z-index: 999; 
+  z-index: 999;
 }
 
 input[type="radio" i] {
@@ -69,10 +66,11 @@ input[type="radio" i] {
   padding: 20px;
   text-align: center;
   width: 700px;
-  height: 500px;
+  height: 491px;
   min-height: 45vh;
   overflow-y: auto;
   overflow-x: hidden;
+  margin-top: 80px;
 }
 
 .confirmationMessage {
@@ -94,12 +92,12 @@ input[type="radio" i] {
 }
 
 .confirmationButtons button.confirm {
-  background-color: #4caf50; 
+  background-color: #4caf50;
   color: #fff;
 }
 
 .confirmationButtons button.cancel {
-  background-color: #f44336; 
+  background-color: #f44336;
   color: #fff;
 }
 
@@ -112,7 +110,7 @@ input[type="radio" i] {
 .inputOfFollowUp {
   width: 20%;
   padding: 8px;
-  font-size: 11pt; 
+  font-size: 11pt;
   border: 1px solid #ccc;
   transition: border-color 0.3s, box-shadow 0.3s;
   margin: 3px;
@@ -133,13 +131,12 @@ input[type="radio" i] {
 }
 
 .inputOfFollowUp:hover {
-  border-color: #336cfb; 
-  box-shadow: 0 0 8px rgba(0, 123, 255, 0.5); 
-
+  border-color: #336cfb;
+  box-shadow: 0 0 8px rgba(0, 123, 255, 0.5);
 }
 
 .button:hover {
-  background-color: #0056b3; 
+  background-color: #0056b3;
 }
 
 .selectDropdown {
@@ -153,10 +150,10 @@ input[type="radio" i] {
   margin-top: -10px;
 }
 
-.selectDropdown:hover{
+.selectDropdown:hover {
   outline: none;
   border-color: #336cfb;
-  box-shadow: 0 0 0 0.2rem rgba(0,123,255,.25);
+  box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
 }
 
 .optionItem {
@@ -177,10 +174,9 @@ input[type="radio" i] {
   left: -1px;
   position: relative;
   background-color: #d1d3d1;
-  content: '';
+  content: "";
   visibility: visible;
   border: 2px solid white;
-  
 }
 
 /*
