--- a/clinic-frontend/src/Elements/Header.module.css
+++ b/clinic-frontend/src/Elements/Header.module.css
@@ -29,11 +29,11 @@
 
 /* Responsive design: Adjust logo size for smaller screens */
 
-  .navbarLogo img {
-    margin-top: 18px;
-    width: 11vw;
-    height: 21vh;
-  }
+.navbarLogo img {
+  margin-top: 18px;
+  width: 11vw;
+  height: 21vh;
+}
 
 .navbarLinks {
   display: flex;
@@ -95,7 +95,7 @@
 
 .dropdownItem:hover {
   background-color: #f5f5f5; /* Hover effect for dropdown items */
-  color:#007bff;
+  color: #007bff;
   cursor: pointer;
 }
 
@@ -200,8 +200,8 @@
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1); /* Grey shadow */
   font-size: 12pt;
   border-top-left-radius: 25px;
-  border-bottom-left-radius: 25px;;
-  font-family:Arial, Helvetica, sans-serif;
+  border-bottom-left-radius: 25px;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .searchIcon {
@@ -219,4 +219,15 @@
   width: 20px; /* Adjust as needed */
   height: auto;
   color: white;
+}
+
+.walletContainer {
+  display: flex;
+  align-items: center;
+  margin-right: 20px; /* Adjust spacing as needed */
+}
+
+.walletValue {
+  margin-left: 10px; /* Space between icon and text */
+  /* Add any additional styling for the wallet value text here */
 }
